--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repair-saas",
+  "name": "@repair/saas",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -9,9 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
-    "turbo": "^2.5.8",
-    "typescript": "5.9.2"
+    "turbo": "latest"  
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
