--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,6 +16,7 @@
     },
     "prettier": "@repair/prettier",
     "dependencies": {
-        "@casl/ability": "^6.7.3"
+        "@casl/ability": "^6.7.3",
+        "zod": "^4.1.11"
     }
 }
