--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,15 +2,16 @@
     "name": "@repair/api",
     "version": "1.0.0",
     "private": true,
-
     "scripts": {
-        "dev": "tsx watch src/index.ts"
+        "dev": "tsx watch src/htpps/server.ts"
     },
-
     "dependencies": {
-        "@repair/auth": "workspace:*"
+        "@fastify/cors": "^11.1.0",
+        "@repair/auth": "workspace:*",
+        "fastify": "^5.6.1",
+        "fastify-type-provider-zod": "^6.0.0",
+        "zod": "^4.1.11"
     },
-
     "devDependencies": {
         "@repair/eslint-config": "workspace:*",
         "@repair/prettier": "workspace:*",
