--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@fastify/cors": "^11.1.0",
+        "@prisma/client": "6.16.2",
         "@repair/auth": "workspace:*",
         "fastify": "^5.6.1",
         "fastify-type-provider-zod": "^6.0.0",
@@ -17,6 +18,7 @@
         "@repair/prettier": "workspace:*",
         "@repair/tsconfig": "workspace:*",
         "@types/node": "^24.5.2",
+        "prisma": "^6.16.2",
         "tsx": "^4.20.6"
     },
     "prettier": "@repair/prettier",
