feat(api): integrate bcryptjs for password hashing and update TypeScript configuration

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,4 +1,10 @@
 {
     "extends": "@repair/tsconfig/node.json",
     "include": ["src/**/*"],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
+    }
 }
