--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
         "@fastify/cors": "^11.1.0",
         "@prisma/client": "6.16.2",
         "@repair/auth": "workspace:*",
+        "bcryptjs": "^3.0.2",
         "fastify": "^5.6.1",
         "fastify-type-provider-zod": "^6.0.0",
         "zod": "^4.1.11"
