feat(api): integrate Swagger documentation and update server configuration

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,10 +3,12 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "tsx watch src/htpps/server.ts"
+        "dev": "tsx watch src/http/server.ts"
     },
     "dependencies": {
         "@fastify/cors": "^11.1.0",
+        "@fastify/swagger": "^9.5.2",
+        "@fastify/swagger-ui": "^5.2.3",
         "@prisma/client": "6.16.2",
         "@repair/auth": "workspace:*",
         "bcryptjs": "^3.0.2",
