--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@fastify/cors": "^11.1.0",
+        "@fastify/jwt": "^10.0.0",
         "@fastify/swagger": "^9.5.2",
         "@fastify/swagger-ui": "^5.2.3",
         "@prisma/client": "6.16.2",
