--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
         "@repair/auth": "workspace:*",
         "bcryptjs": "^3.0.2",
         "fastify": "^5.6.1",
+        "fastify-plugin": "^5.1.0",
         "fastify-type-provider-zod": "^6.0.0",
         "zod": "^4.1.11"
     },
