--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "@repair/tsconfig/node.json",
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "@types/*.d.ts"],
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
