--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,11 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "tsx watch src/http/server.ts"
+        "dev": "pnpm env:load tsx watch --env-file=../../.env src/http/server.ts",
+        "db:migrate": "pnpm env:load prisma migrate dev",
+        "db:studio": "pnpm env:load prisma studio",
+        "db:seed": "pnpm env:load prisma db seed",
+        "env:load": "dotenv -e ../../.env --"
     },
     "dependencies": {
         "@fastify/cors": "^11.1.0",
@@ -12,6 +16,7 @@
         "@fastify/swagger-ui": "^5.2.3",
         "@prisma/client": "6.16.2",
         "@repair/auth": "workspace:*",
+        "@repair/env": "workspace:*",
         "bcryptjs": "^3.0.2",
         "fastify": "^5.6.1",
         "fastify-plugin": "^5.1.0",
@@ -24,6 +29,7 @@
         "@repair/prettier": "workspace:*",
         "@repair/tsconfig": "workspace:*",
         "@types/node": "^24.5.2",
+        "dotenv-cli": "^10.0.0",
         "prisma": "^6.16.2",
         "tsx": "^4.20.6"
     },
